--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,39 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.cssparser-0.9.11.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\cssparser-0.9.11.jar
-file.reference.cssparser-0.9.11.jar-1=C:\\Users\\lvtdej0\\Desktop\\lib\\lib\\cssparser-0.9.11.jar
-file.reference.cssparser-0.9.18.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\lib\\cssparser-0.9.18.jar
-file.reference.ehcache-2.8.3.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\lib\\cache\\ehcache-2.8.3.jar
-file.reference.guava-14.0.1.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\guava-14.0.1.jar
-file.reference.guava-14.0.1.jar-1=C:\\Users\\lvtdej0\\Desktop\\lib\\lib\\guava-14.0.1.jar
-file.reference.guava-19.0.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\lib\\guava-19.0.jar
-file.reference.javax.faces-2.3.0-m06-javadoc.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\javax.faces-2.3.0-m06-javadoc.jar
-file.reference.javax.faces-2.3.0-m06-sources.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\javax.faces-2.3.0-m06-sources.jar
-file.reference.javax.servlet.jsp.jstl-1.2.1.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\javax.servlet.jsp.jstl-1.2.1.jar
-file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\javax.servlet.jsp.jstl-api-1.2.1.jar
-file.reference.richfaces-a4j-4.5.16.Final-sources.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\richfaces-a4j-4.5.16.Final-sources.jar
-file.reference.richfaces-a4j-4.5.16.Final.jar-1=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\richfaces-a4j-4.5.16.Final.jar
-file.reference.richfaces-components-api-4.3.4.Final-sources.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\richfaces-components-api-4.3.4.Final-sources.jar
-file.reference.richfaces-components-api-4.3.4.Final.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\richfaces-components-api-4.3.4.Final.jar
-file.reference.richfaces-components-api-4.3.4.Final.jar-1=C:\\Users\\lvtdej0\\Desktop\\lib\\lib\\richfaces-components-api-4.3.4.Final.jar
-file.reference.richfaces-components-ui-4.3.4.Final-sources.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\richfaces-components-ui-4.3.4.Final-sources.jar
-file.reference.richfaces-components-ui-4.3.4.Final.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\richfaces-components-ui-4.3.4.Final.jar
-file.reference.richfaces-components-ui-4.3.4.Final.jar-1=C:\\Users\\lvtdej0\\Desktop\\lib\\lib\\richfaces-components-ui-4.3.4.Final.jar
-file.reference.richfaces-core-4.5.16.Final-sources.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\richfaces-core-4.5.16.Final-sources.jar
-file.reference.richfaces-core-4.5.16.Final.jar-1=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\richfaces-core-4.5.16.Final.jar
-file.reference.richfaces-core-api-4.3.4.Final-sources.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\richfaces-core-api-4.3.4.Final-sources.jar
-file.reference.richfaces-core-api-4.3.4.Final.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\richfaces-core-api-4.3.4.Final.jar
-file.reference.richfaces-core-api-4.3.4.Final.jar-1=C:\\Users\\lvtdej0\\Desktop\\lib\\lib\\richfaces-core-api-4.3.4.Final.jar
-file.reference.richfaces-core-impl-4.3.4.Final-sources.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\richfaces-core-impl-4.3.4.Final-sources.jar
-file.reference.richfaces-core-impl-4.3.4.Final.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\richfaces-core-impl-4.3.4.Final.jar
-file.reference.richfaces-core-impl-4.3.4.Final.jar-1=C:\\Users\\lvtdej0\\Desktop\\lib\\lib\\richfaces-core-impl-4.3.4.Final.jar
-file.reference.richfaces-page-fragments-4.5.16.Final.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\lib\\richfaces-page-fragments-4.5.16.Final.jar
-file.reference.richfaces-rich-4.5.16.Final-sources.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\richfaces-rich-4.5.16.Final-sources.jar
-file.reference.richfaces-rich-4.5.16.Final.jar-1=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\richfaces-rich-4.5.16.Final.jar
-file.reference.sac-1.3.jar=C:\\Users\\lvtdej0\\Desktop\\Studium IUBH\\Projekte u. Hausarbeiten\\Fallstudie ISPE\\richfaces-distribution-4.5.16.Final\\richfaces-distribution-4.5.16.Final\\lib\\sac-1.3.jar
-file.reference.sac.jar=C:\\Users\\lvtdej0\\Desktop\\lib\\sac.jar
-file.reference.sac.jar-1=C:\\Users\\lvtdej0\\Desktop\\lib\\lib\\sac.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -72,40 +39,7 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.richfaces-a4j-4.5.16.Final-sources.jar}:\
-    ${file.reference.richfaces-a4j-4.5.16.Final.jar-1}:\
-    ${file.reference.richfaces-core-4.5.16.Final-sources.jar}:\
-    ${file.reference.richfaces-core-4.5.16.Final.jar-1}:\
-    ${file.reference.richfaces-rich-4.5.16.Final-sources.jar}:\
-    ${file.reference.richfaces-rich-4.5.16.Final.jar-1}:\
-    ${file.reference.cssparser-0.9.18.jar}:\
-    ${file.reference.guava-19.0.jar}:\
-    ${file.reference.richfaces-page-fragments-4.5.16.Final.jar}:\
-    ${file.reference.sac-1.3.jar}:\
-    ${file.reference.ehcache-2.8.3.jar}:\
-    ${file.reference.javax.faces-2.3.0-m06-sources.jar}:\
-    ${file.reference.javax.faces-2.3.0-m06-javadoc.jar}:\
-    ${file.reference.cssparser-0.9.11.jar}:\
-    ${file.reference.guava-14.0.1.jar}:\
-    ${file.reference.javax.servlet.jsp.jstl-1.2.1.jar}:\
-    ${file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar}:\
-    ${file.reference.richfaces-components-api-4.3.4.Final-sources.jar}:\
-    ${file.reference.richfaces-components-api-4.3.4.Final.jar}:\
-    ${file.reference.richfaces-components-ui-4.3.4.Final-sources.jar}:\
-    ${file.reference.richfaces-components-ui-4.3.4.Final.jar}:\
-    ${file.reference.richfaces-core-api-4.3.4.Final-sources.jar}:\
-    ${file.reference.richfaces-core-api-4.3.4.Final.jar}:\
-    ${file.reference.richfaces-core-impl-4.3.4.Final-sources.jar}:\
-    ${file.reference.richfaces-core-impl-4.3.4.Final.jar}:\
-    ${file.reference.sac.jar}:\
-    ${file.reference.cssparser-0.9.11.jar-1}:\
-    ${file.reference.guava-14.0.1.jar-1}:\
-    ${file.reference.richfaces-components-api-4.3.4.Final.jar-1}:\
-    ${file.reference.richfaces-components-ui-4.3.4.Final.jar-1}:\
-    ${file.reference.richfaces-core-api-4.3.4.Final.jar-1}:\
-    ${file.reference.richfaces-core-impl-4.3.4.Final.jar-1}:\
-    ${file.reference.sac.jar-1}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -132,7 +66,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
